--- a/stickerfiend_vue/public/index.html
+++ b/stickerfiend_vue/public/index.html
@@ -10,7 +10,7 @@
     <script src="https://js.stripe.com/v3/"></script>
   </head>
 
-  <body>
+  <body class="has-background-grey-light">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
